crates/cribo/tests/snapshots/execution_results@xfail_all_variable_handling.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_all_variable_handling/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "Testing simple module exports:\npublic_func() = Hello from public_func\nCONSTANT = 42\n\nTesting nested package exports:",
    stderr: "Traceback (most recent call last):\n  File \"<stdin>\", line 40, in <module>",
}
