crates/cribo/tests/snapshots/execution_results@xfail_ast_rewriting_happy_path.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_ast_rewriting_happy_path/main.py
---
ExecutionResults {
    status: Success,
    stdout: "",
    stderr: "",
}
