crates/cribo/tests/snapshots/execution_results@xfail_ast_rewriting_regular_import_aliases.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_ast_rewriting_regular_import_aliases/main.py
---
ExecutionResults {
    status: Success,
    stdout: "",
    stderr: "",
}
